# RTIMULib2

./: .gitignore  .gitmodules  README.md  RTIMULibVersion.txt
Linux/: CMakeLists.txt
Linux/RTIMULibCal/: CMakeLists.txt  Makefile  RTIMULibCal.cpp
Linux/RTIMULibDemo/: RTIMULibDemo.cpp
Linux/RTIMULibDemoGL/: RTIMULibDemoGL.cpp
Linux/RTIMULibGL/QtGLLib/: QTGLLib.vcxproj
Linux/python/: setup.py
Linux/python/tests/: InjectIMUFromCSV.py  example_data.csv
RTEllipsoidFit/: CMakeLists.txt  ellipsoid_fit.cpp  ellipsoid_fit.h
RTHost/RTHostIMUGL/: RTHostIMUGL.cpp
RTHost/RTIMULibGL/QtGLLib/: QTGLLib.vcxproj
RTIMULib/: CMakeLists.txt  RTIMULib.pri  RTIMUSettings.cpp
RTIMULib/IMUDrivers/: RTIMU.cpp  RTIMUDefs.h  RTIMUHMC5883LADXL345.cpp  RTIMUHMC5883LADXL345.h
